--- a/www/login.html
+++ b/www/login.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <button onclick="window.location.href = '/.auth/login/github'">Connect</button>
     <div class="container">
         <a class="login-button">Login with GitHub</a></li>
     </div>
